--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
             text-align: center;
         }
         .white-square {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        max-width: 600px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        display: none;
-        color: black;
-        text-align: center;
-    }
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 600px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: none;
+            color: black;
+            text-align: center;
+        }
 
-    .white-square h1 {
+        .white-square h1 {
             font-size: 24px;
             margin-bottom: 10px;
         }
@@ -122,140 +122,140 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
 </head>
 <body>
-    <div class="portfolio-item">tarakokko3233です! 1番下までスクロールしてね</div>
-    <div class="white-square">
-        <h1>Portfolio Links</h1>
-        <h2>各色の立方体をクリックしてね</h2>
-        <p>白:ポートフォリオ</p>
-        <p>青:X(Twitter)</p>
-        <p>灰:GitHub</p>
-        <p>黒:AtCoder</p>
-        <p>緑:Qiita</p>
-        <p>赤:Email送信</p>
-        <p>Email:tarakokko32332gmail.com</p>
-        <p>※各リンクは新しいタブで開きます</p>
-    </div>
+<div class="portfolio-item">tarakokko3233です! 1番下までスクロールしてね</div>
+<div class="white-square">
+    <h1>Portfolio Links</h1>
+    <h2>各色の立方体をクリックしてね</h2>
+    <p>白:ポートフォリオ</p>
+    <p>青:X(Twitter)</p>
+    <p>灰:GitHub</p>
+    <p>黒:AtCoder</p>
+    <p>緑:Qiita</p>
+    <p>赤:Email送信</p>
+    <p>Email:tarakokko32332gmail.com</p>
+    <p>※各リンクは新しいタブで開きます</p>
+</div>
 <script>
-let scene = new THREE.Scene();
-let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-let renderer = new THREE.WebGLRenderer({ alpha: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+    let scene = new THREE.Scene();
+    let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    let renderer = new THREE.WebGLRenderer({ alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-let textMeshes = [];
-let linkMeshes = [];
-let loader = new THREE.FontLoader();
-let scrollProgress = 0;
+    let textMeshes = [];
+    let linkMeshes = [];
+    let loader = new THREE.FontLoader();
+    let scrollProgress = 0;
 
-camera.position.z = 500;
+    camera.position.z = 500;
 
-// selfintroductionのテキスト生成と配置
-loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function(font) {
-    const texts = ['tarakokko3233', 'Portfolio Links'];
-    let offset = window.innerWidth / 40; // 文字の間隔を調整
-    texts.forEach((text, index) => {
-        let yPosition = index * 50 - 25; // Y位置と文字サイズの調整により変更
-        for (let i = 0; i < text.length; i++) {
-            let geometry = new THREE.TextGeometry(text[i], {
-                font: font,
-                size: 30, // 文字サイズを小さく調整
-                height: 5,
-                curveSegments: 12,
-            });
-            let material = new THREE.MeshBasicMaterial({ color: 0x000000 });
-            let mesh = new THREE.Mesh(geometry, material);
-            let randomX = Math.random() * window.innerWidth * 0.8 - window.innerWidth * 0.4;
-            let randomY = Math.random() * 200 - 100 + yPosition;
-            mesh.position.set(randomX, randomY, 0);
-            scene.add(mesh);
-            textMeshes.push({mesh, initialPosition: mesh.position.clone(), finalPosition: new THREE.Vector3(i * offset - (text.length - 1) * offset / 2, yPosition, 0)});
-        }
-    });
-    createLinks(); // テキストが配置された後にリンクを作成
-});
-
-// リンク図形の生成と配置
-function createLinks() {
-    const linkData = [
-        { url: 'https://tarakokko3233.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
-        { url: 'https://twitter.com/tarakokko3233su', color: 0x1DA1F2, text: 'Twitter' },
-        { url: 'https://github.com/tarakokko3233', color: 0x666666, text: 'GitHub' },
-        { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
-        { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
-        { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
-    ];
-    const offset = window.innerWidth / (linkData.length + 6);
-    linkData.forEach((link, index) => {
-        let geometry = new THREE.BoxGeometry(20, 20, 20);
-        let material = new THREE.MeshBasicMaterial({ color: link.color });
-        let mesh = new THREE.Mesh(geometry, material);
-        mesh.position.set((index - linkData.length/1.6 ) * offset + window.innerWidth / 10, -window.innerHeight, 0);
-        mesh.userData = { url: link.url, text: link.text };
-        scene.add(mesh);
-        linkMeshes.push(mesh);
-
-        // 吹き出しの作成
-        let bubble = document.createElement('div');
-        bubble.className = 'bubble';
-        bubble.textContent = link.text;
-        document.body.appendChild(bubble);
-        mesh.userData.bubble = bubble;
-    });
-}
-
-
-
-
-renderer.domElement.addEventListener('click', (event) => {
-    let mouse = new THREE.Vector2(
-        (event.clientX / window.innerWidth) * 2 - 1,
-        -(event.clientY / window.innerHeight) * 2 + 1
-    );
-    let raycaster = new THREE.Raycaster();
-    raycaster.setFromCamera(mouse, camera);
-    let intersects = raycaster.intersectObjects(linkMeshes);
-    if (intersects.length > 0) {
-        let url = intersects[0].object.userData.url;
-        window.open(url, '_blank');
-    }
-});
-
-function onTouchStart(event) {
-            event.preventDefault();
-
-            // タッチ位置を取得
-            const touch = event.touches[0];
-            const touchX = touch.clientX;
-            const touchY = touch.clientY;
-
-            // タッチ位置を正規化（-1〜1の範囲に変換）
-            const normalizedX = (touchX / window.innerWidth) * 2 - 1;
-            const normalizedY = -(touchY / window.innerHeight) * 2 + 1;
-
-            // レイキャスターを生成
-            const raycaster = new THREE.Raycaster();
-            raycaster.setFromCamera(new THREE.Vector2(normalizedX, normalizedY), camera);
-
-            // レイキャスティングを行い、交差したオブジェクトを取得
-            const intersects = raycaster.intersectObjects(linkMeshes);
-
-            if (intersects.length > 0) {
-                const url = intersects[0].object.userData.url;
-                window.open(url, '_blank');
+    // selfintroductionのテキスト生成と配置
+    loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function(font) {
+        const texts = ['tarakokko3233', 'Portfolio Links'];
+        let offset = window.innerWidth / 40; // 文字の間隔を調整
+        texts.forEach((text, index) => {
+            let yPosition = index * 50 - 25; // Y位置と文字サイズの調整により変更
+            for (let i = 0; i < text.length; i++) {
+                let geometry = new THREE.TextGeometry(text[i], {
+                    font: font,
+                    size: 30, // 文字サイズを小さく調整
+                    height: 5,
+                    curveSegments: 12,
+                });
+                let material = new THREE.MeshBasicMaterial({ color: 0x000000 });
+                let mesh = new THREE.Mesh(geometry, material);
+                let randomX = Math.random() * window.innerWidth * 0.8 - window.innerWidth * 0.4;
+                let randomY = Math.random() * 200 - 100 + yPosition;
+                mesh.position.set(randomX, randomY, 0);
+                scene.add(mesh);
+                textMeshes.push({mesh, initialPosition: mesh.position.clone(), finalPosition: new THREE.Vector3(i * offset - (text.length - 1) * offset / 2, yPosition, 0)});
             }
-        }
-
-        document.body.addEventListener('touchstart', onTouchStart, false);
-
-
-
-window.addEventListener('scroll', update);
-// スクロールイベントでアニメーションを更新
-function update() {
-    scrollProgress = window.scrollY / (document.body.scrollHeight - window.innerHeight);
-    textMeshes.forEach(({mesh, initialPosition, finalPosition}) => {
-        mesh.position.lerpVectors(initialPosition, finalPosition, Math.min(scrollProgress * 2, 1));
+        });
+        createLinks(); // テキストが配置された後にリンクを作成
     });
+
+    // リンク図形の生成と配置
+    function createLinks() {
+        const linkData = [
+            { url: 'https://tarakokko3233.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
+            { url: 'https://twitter.com/tarakokko3233su', color: 0x1DA1F2, text: 'Twitter' },
+            { url: 'https://github.com/tarakokko3233', color: 0x666666, text: 'GitHub' },
+            { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
+            { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
+            { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
+        ];
+        const offset = window.innerWidth / (linkData.length + 6);
+        linkData.forEach((link, index) => {
+            let geometry = new THREE.BoxGeometry(25, 25, 25);
+            let material = new THREE.MeshBasicMaterial({ color: link.color });
+            let mesh = new THREE.Mesh(geometry, material);
+            mesh.position.set((index - linkData.length/1.6 ) * offset + window.innerWidth / 10, -window.innerHeight/2, 0);
+            mesh.userData = { url: link.url, text: link.text };
+            scene.add(mesh);
+            linkMeshes.push(mesh);
+
+            // 吹き出しの作成
+            let bubble = document.createElement('div');
+            bubble.className = 'bubble';
+            bubble.textContent = link.text;
+            document.body.appendChild(bubble);
+            mesh.userData.bubble = bubble;
+        });
+    }
+
+
+
+
+    renderer.domElement.addEventListener('click', (event) => {
+        let mouse = new THREE.Vector2(
+            (event.clientX / window.innerWidth) * 2 - 1,
+            -(event.clientY / window.innerHeight) * 2 + 1
+        );
+        let raycaster = new THREE.Raycaster();
+        raycaster.setFromCamera(mouse, camera);
+        let intersects = raycaster.intersectObjects(linkMeshes);
+        if (intersects.length > 0) {
+            let url = intersects[0].object.userData.url;
+            window.open(url, '_blank');
+        }
+    });
+
+    function onTouchStart(event) {
+        event.preventDefault();
+
+        // タッチ位置を取得
+        const touch = event.touches[0];
+        const touchX = touch.clientX;
+        const touchY = touch.clientY;
+
+        // タッチ位置を正規化（-1〜1の範囲に変換）
+        const normalizedX = (touchX / window.innerWidth) * 2 - 1;
+        const normalizedY = -(touchY / window.innerHeight) * 2 + 1;
+
+        // レイキャスターを生成
+        const raycaster = new THREE.Raycaster();
+        raycaster.setFromCamera(new THREE.Vector2(normalizedX, normalizedY), camera);
+
+        // レイキャスティングを行い、交差したオブジェクトを取得
+        const intersects = raycaster.intersectObjects(linkMeshes);
+
+        if (intersects.length > 0) {
+            const url = intersects[0].object.userData.url;
+            window.open(url, '_blank');
+        }
+    }
+
+    document.body.addEventListener('touchstart', onTouchStart, false);
+
+
+
+    window.addEventListener('scroll', update);
+    // スクロールイベントでアニメーションを更新
+    function update() {
+        scrollProgress = window.scrollY / (document.body.scrollHeight - window.innerHeight);
+        textMeshes.forEach(({mesh, initialPosition, finalPosition}) => {
+            mesh.position.lerpVectors(initialPosition, finalPosition, Math.min(scrollProgress * 2, 1));
+        });
 
         let linkProgress = Math.min((scrollProgress - 0.25) * 2, 1);
         linkMeshes.forEach((mesh, index) => {
@@ -276,85 +276,85 @@ function update() {
         });
 
 
-    // ページの一番下までスクロールしたらテキストを非表示にし、白い四角を表示
-    if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
-        textMeshes.forEach(({mesh}) => {
-            mesh.visible = false;
-        });
-        document.querySelector('.white-square').style.display = 'block';
-    } else {
-        textMeshes.forEach(({mesh}) => {
-            mesh.visible = true;
-        });
-        document.querySelector('.white-square').style.display = 'none';
-    }
-}
-
-document.body.addEventListener('mousemove', (event) => {
-    let mouse = new THREE.Vector2(
-        (event.clientX / window.innerWidth) * 2 - 1,
-        -(event.clientY / window.innerHeight) * 2 + 1
-    );
-    let raycaster = new THREE.Raycaster();
-    raycaster.setFromCamera(mouse, camera);
-    let intersects = raycaster.intersectObjects(linkMeshes);
-
-    linkMeshes.forEach((mesh) => {
-        let bubble = mesh.userData.bubble;
-
-        if (intersects.length > 0 && intersects[0].object === mesh) {
-            bubble.style.display = 'block';
-            bubble.style.opacity = '1';
-        } else {
-            bubble.style.opacity = '0';
-            setTimeout(() => {
-                if (bubble.style.opacity === '0') {
-                    bubble.style.display = 'none';
-                }
-            }, 200);
-        }
-    });
-});
-
-document.body.addEventListener('touchmove', (event) => {
-            event.preventDefault();
-
-            const touch = event.touches[0];
-            const touchX = touch.clientX;
-            const touchY = touch.clientY;
-
-            const normalizedX = (touchX / window.innerWidth) * 2 - 1;
-            const normalizedY = -(touchY / window.innerHeight) * 2 + 1;
-
-            const raycaster = new THREE.Raycaster();
-            raycaster.setFromCamera(new THREE.Vector2(normalizedX, normalizedY), camera);
-
-            const intersects = raycaster.intersectObjects(linkMeshes);
-
-            linkMeshes.forEach((mesh) => {
-                const bubble = mesh.userData.bubble;
-
-                if (intersects.length > 0 && intersects[0].object === mesh) {
-                    bubble.style.display = 'block';
-                    bubble.style.opacity = '1';
-                } else {
-                    bubble.style.opacity = '0';
-                    setTimeout(() => {
-                        if (bubble.style.opacity === '0') {
-                            bubble.style.display = 'none';
-                        }
-                    }, 200);
-                }
+        // ページの一番下までスクロールしたらテキストを非表示にし、白い四角を表示
+        if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
+            textMeshes.forEach(({mesh}) => {
+                mesh.visible = false;
             });
+            document.querySelector('.white-square').style.display = 'block';
+        } else {
+            textMeshes.forEach(({mesh}) => {
+                mesh.visible = true;
+            });
+            document.querySelector('.white-square').style.display = 'none';
+        }
+    }
+
+    document.body.addEventListener('mousemove', (event) => {
+        let mouse = new THREE.Vector2(
+            (event.clientX / window.innerWidth) * 2 - 1,
+            -(event.clientY / window.innerHeight) * 2 + 1
+        );
+        let raycaster = new THREE.Raycaster();
+        raycaster.setFromCamera(mouse, camera);
+        let intersects = raycaster.intersectObjects(linkMeshes);
+
+        linkMeshes.forEach((mesh) => {
+            let bubble = mesh.userData.bubble;
+
+            if (intersects.length > 0 && intersects[0].object === mesh) {
+                bubble.style.display = 'block';
+                bubble.style.opacity = '1';
+            } else {
+                bubble.style.opacity = '0';
+                setTimeout(() => {
+                    if (bubble.style.opacity === '0') {
+                        bubble.style.display = 'none';
+                    }
+                }, 200);
+            }
         });
+    });
+
+    document.body.addEventListener('touchmove', (event) => {
+        event.preventDefault();
+
+        const touch = event.touches[0];
+        const touchX = touch.clientX;
+        const touchY = touch.clientY;
+
+        const normalizedX = (touchX / window.innerWidth) * 2 - 1;
+        const normalizedY = -(touchY / window.innerHeight) * 2 + 1;
+
+        const raycaster = new THREE.Raycaster();
+        raycaster.setFromCamera(new THREE.Vector2(normalizedX, normalizedY), camera);
+
+        const intersects = raycaster.intersectObjects(linkMeshes);
+
+        linkMeshes.forEach((mesh) => {
+            const bubble = mesh.userData.bubble;
+
+            if (intersects.length > 0 && intersects[0].object === mesh) {
+                bubble.style.display = 'block';
+                bubble.style.opacity = '1';
+            } else {
+                bubble.style.opacity = '0';
+                setTimeout(() => {
+                    if (bubble.style.opacity === '0') {
+                        bubble.style.display = 'none';
+                    }
+                }, 200);
+            }
+        });
+    });
 
 
-function animate() {
-    requestAnimationFrame(animate);
-    renderer.render(scene, camera);
-}
+    function animate() {
+        requestAnimationFrame(animate);
+        renderer.render(scene, camera);
+    }
 
-animate();
+    animate();
 </script>
 </body>
 </html>
