--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>tarakokko3233 Portfolio Links</title>
+    <title>Self Introduction Animation</title>
     <style>
         body, html {
             height: 300%;
