--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Self Introduction Animation</title>
+    <title>tarakokko3233 Portfolio Links</title>
     <style>
         body, html {
             height: 300%;
@@ -132,7 +132,7 @@
     <p>黒:AtCoder</p>
     <p>緑:Qiita</p>
     <p>赤:Email送信</p>
-    <p>Email:tarakokko32332gmail.com</p>
+    <p>Email:tarakokko3233gmail.com</p>
     <p>※各リンクは新しいタブで開きます</p>
 </div>
 <script>
