--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <p>灰:GitHub</p>
     <p>黒:AtCoder</p>
     <p>緑:Qiita</p>
+    <p>深緑:Qiita</p>
     <p>赤:Email送信</p>
     <p>Email:tarakokko3233gmail.com</p>
     <p>※各リンクは新しいタブで開きます</p>
@@ -182,6 +183,7 @@
             { url: 'https://github.com/tarakokko3233', color: 0x666666, text: 'GitHub' },
             { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
             { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
+            { url: 'https://speakerdeck.com/tarakokko3233', color: 0x008b8b, text: 'SpeakerDeck' },
             { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
         ];
         const offset = window.innerWidth / (linkData.length + 6);
@@ -202,8 +204,6 @@
             mesh.userData.bubble = bubble;
         });
     }
-
-
 
 
     renderer.domElement.addEventListener('click', (event) => {
