--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <p>灰:GitHub</p>
     <p>黒:AtCoder</p>
     <p>緑:Qiita</p>
-    <p>深緑:Qiita</p>
+    <p>深緑:Speaker Deck</p>
     <p>赤:Email送信</p>
     <p>Email:tarakokko3233gmail.com</p>
     <p>※各リンクは新しいタブで開きます</p>
