--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <p>黒:AtCoder</p>
     <p>緑:Qiita</p>
     <p>深緑:Speaker Deck</p>
+    <p>薄灰:Teratail</p>
     <p>赤:Email送信</p>
     <p>Email:tarakokko3233gmail.com</p>
     <p>※各リンクは新しいタブで開きます</p>
@@ -179,11 +180,12 @@
     function createLinks() {
         const linkData = [
             { url: 'https://tarakokko3233.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
-            { url: 'https://twitter.com/tarakokko3233su', color: 0x1DA1F2, text: 'Twitter' },
+            { url: 'https://twitter.com/tarakokko3233', color: 0x1DA1F2, text: 'Twitter' },
             { url: 'https://github.com/tarakokko3233', color: 0x666666, text: 'GitHub' },
             { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
             { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
             { url: 'https://speakerdeck.com/tarakokko3233', color: 0x008b8b, text: 'SpeakerDeck' },
+            { url: 'https://teratail.com/users/tarakokko3233', color: 0xf5f5f5, text: 'Teratail' },
             { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
         ];
         const offset = window.innerWidth / (linkData.length + 6);
