--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
             { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
             { url: 'https://speakerdeck.com/tarakokko3233', color: 0x008b8b, text: 'SpeakerDeck' },
-            { url: 'https://teratail.com/users/tarakokko3233', color: 0xf5f5f5, text: 'Teratail' },
+            { url: 'https://teratail.com/users/tarakokko3233', color: 0xdcdcdc, text: 'Teratail' },
             { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
         ];
         const offset = window.innerWidth / (linkData.length + 6);
