--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p>緑:Qiita</p>
     <p>深緑:Speaker Deck</p>
     <p>薄灰:Teratail</p>
-    <p>橙:stackoverflow</p>
+    <p>橙:Stackoverflow</p>
     <p>赤:Email送信</p>
     <p>Email:tarakokko3233gmail.com</p>
     <p>※各リンクは新しいタブで開きます</p>
