--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
 </head>
 <body>
-<div class="portfolio-item">tarakokko3233です! 1番下までスクロールしてね</div>
+<div class="portfolio-item">JavaLangRuntimeError(taramanji)です! 1番下までスクロールしてね</div>
 <div class="white-square">
     <h1>Portfolio Links</h1>
     <h2>各色の立方体をクリックしてね</h2>
@@ -154,7 +154,7 @@
 
     // selfintroductionのテキスト生成と配置
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function(font) {
-        const texts = ['tarakokko3233', 'Portfolio Links'];
+        const texts = ['JavaLangRuntimeError', 'Portfolio Links'];
         let offset = window.innerWidth / 40; // 文字の間隔を調整
         texts.forEach((text, index) => {
             let yPosition = index * 50 - 25; // Y位置と文字サイズの調整により変更
@@ -180,14 +180,14 @@
     // リンク図形の生成と配置
     function createLinks() {
         const linkData = [
-            { url: 'https://tarakokko3233.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
-            { url: 'https://twitter.com/tarakokko3233', color: 0x1DA1F2, text: 'Twitter' },
-            { url: 'https://github.com/tarakokko3233', color: 0x666666, text: 'GitHub' },
-            { url: 'https://atcoder.jp/users/tarakokko3233', color: 0x000000, text: 'Atcoder' },
-            { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
-            { url: 'https://speakerdeck.com/tarakokko3233', color: 0x008b8b, text: 'SpeakerDeck' },
-            { url: 'https://teratail.com/users/tarakokko3233', color: 0xc0c0c0, text: 'Teratail' },
-            { url: 'https://stackoverflow.com/users/25707513/tarakokko3233', color: 0xffa500, text: 'stackoverflow' },
+            { url: 'https://javalangruntimeerror.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
+            { url: 'https://twitter.com/javalangruntime', color: 0x1DA1F2, text: 'Twitter' },
+            { url: 'https://github.com/javalangruntimeerror', color: 0x666666, text: 'GitHub' },
+            { url: 'https://atcoder.jp/users/javalangruntimee', color: 0x000000, text: 'Atcoder' },
+            { url: 'https://qiita.com/javalangruntimeerror', color: 0x55C500, text: 'Qiita' },
+            { url: 'https://speakerdeck.com/javalangruntimeerror', color: 0x008b8b, text: 'SpeakerDeck' },
+            { url: 'https://teratail.com/users/javalangruntime', color: 0xc0c0c0, text: 'Teratail' },
+            { url: 'https://stackoverflow.com/users/25707513/javalangruntimeerror', color: 0xffa500, text: 'stackoverflow' },
             { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
         ];
         const offset = window.innerWidth / (linkData.length + 6);
