--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>tarakokko3233 Portfolio Links</title>
+    <title>taramanji(JavaLangRuntimeError)</title>
     <style>
         body, html {
             height: 300%;
@@ -122,7 +122,7 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
 </head>
 <body>
-<div class="portfolio-item">JavaLangRuntimeError(taramanji)です! 1番下までスクロールしてね</div>
+<div class="portfolio-item">taramanji(JavaLangRuntimeError)です! 1番下までスクロールしてね</div>
 <div class="white-square">
     <h1>Portfolio Links</h1>
     <h2>各色の立方体をクリックしてね</h2>
@@ -154,7 +154,7 @@
 
     // selfintroductionのテキスト生成と配置
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function(font) {
-        const texts = ['JavaLangRuntimeError', 'Portfolio Links'];
+        const texts = ['taramanji(JavaLangRuntimeError)', 'Portfolio Links'];
         let offset = window.innerWidth / 40; // 文字の間隔を調整
         texts.forEach((text, index) => {
             let yPosition = index * 50 - 25; // Y位置と文字サイズの調整により変更
