--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>taramanji(JavaLangRuntimeError)</title>
+    <title>taramanji(JavaLangRuntimeException)</title>
     <style>
         body, html {
             height: 300%;
@@ -122,7 +122,7 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
 </head>
 <body>
-<div class="portfolio-item">taramanji(JavaLangRuntimeError)です! 1番下までスクロールしてね</div>
+<div class="portfolio-item">taramanji(JavaLangRuntimeexception)です! 1番下までスクロールしてね</div>
 <div class="white-square">
     <h1>Portfolio Links</h1>
     <h2>各色の立方体をクリックしてね</h2>
@@ -180,14 +180,14 @@
     // リンク図形の生成と配置
     function createLinks() {
         const linkData = [
-            { url: 'https://javalangruntimeerror.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
+            { url: 'https://javalangruntimeexception.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
             { url: 'https://twitter.com/javalangruntime', color: 0x1DA1F2, text: 'Twitter' },
-            { url: 'https://github.com/javalangruntimeerror', color: 0x666666, text: 'GitHub' },
+            { url: 'https://github.com/javalangruntimeexception', color: 0x666666, text: 'GitHub' },
             { url: 'https://atcoder.jp/users/javalangruntimee', color: 0x000000, text: 'Atcoder' },
-            { url: 'https://qiita.com/javalangruntimeerror', color: 0x55C500, text: 'Qiita' },
-            { url: 'https://speakerdeck.com/javalangruntimeerror', color: 0x008b8b, text: 'SpeakerDeck' },
+            { url: 'https://qiita.com/javalangruntimeexception', color: 0x55C500, text: 'Qiita' },
+            { url: 'https://speakerdeck.com/javalangruntimeexception', color: 0x008b8b, text: 'SpeakerDeck' },
             { url: 'https://teratail.com/users/JavaLangRuntime', color: 0xc0c0c0, text: 'Teratail' },
-            { url: 'https://stackoverflow.com/users/26359061/javalangruntimeerror', color: 0xffa500, text: 'stackoverflow' },
+            { url: 'https://stackoverflow.com/users/26359061/javalangruntimeexception', color: 0xffa500, text: 'stackoverflow' },
             { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
         ];
         const offset = window.innerWidth / (linkData.length + 6);
