--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             transform: translateY(50px);
             animation: fadeInUp 1s forwards;
             text-decoration: none;
-            /* 高さを設定します */
-            height: 340px; /* 画像の高さ(180px) + コンテンツの高さ(約160px) */
+            height: 340px;
         }
 
         .card:nth-child(odd) {
@@ -171,7 +170,7 @@
                         <img src="https://via.placeholder.com/400x180/FFFFFF/000000?text=Portfolio" alt="Portfolio">
                         <div class="card-content">
                             <h3>ポートフォリオ</h3>
-                            <p>私の作品やプロジェクトをまとめたポートフォリオサイトです。</p>
+                            <p>今は開発中なので同じページが開きます(ごめんね)</p>
                         </div>
                     </div>
                     <div class="card-back">
